
MC:
 - Rework the internals, for simpler and modern code. This shall unlock many future improvements.
 - You can now define plugins onto SafetyChecker (a simple DFS explorer), using the declared signals.
   See CommunicationDeterminism for an example.
 - Support mutex in DPOR reduction
 - Seems to work on Arm64 architectures too.

SMPI:
 - fix for FG#100 by ensuring small asynchronous messages never overtake larger
   ones, conforming to the standard.
 - replay: fix waitall behaviour to avoid forgetting requests and leaking
   their handles.
 - tracing: ensure that we dump the TI traces continuously during execution and
   not just at the end, reducing memory cost and performance hit.
 - Update OpenMPI collectives selection logic to match current one (4.1.2)

S4U:
 - New signal: Engine::on_simulation_start_cb()

XBT:
 - Drop xbt_dynar_shrink().

Fixed bugs (FG#.. -> FramaGit bugs; FG!.. -> FG merge requests)
 (FG: issues on Framagit; GH: issues on GitHub)
 - FG#100: [SMPI] Order of the message matching is not guaranteed
 - FG#101: LGPL 2.1 is deprecated license
 - GH#151: Missing mutexes for DPOR.

----------------------------------------------------------------------------

SimGrid (3.30) January 30. 2022.

The Sunday Bloody Sunday release.

Main user-visible changes:
 - The SimDag API for the simulation of the scheduling of Directed Acyclic
   Graphs has been dropped. It was marked as deprecated for a couple of years.
   We finally complete the implementation of what has been called SimDag++
   internally, i.e., porting the different features of SimDag on top of S4U.
   The new way to simulate the execution of dependent activities directly by
   maestro (without any other actor) is details in the examples/cpp/dag-* series
   of examples.
 - The removal of SimDag led us to also remove the export to Jedule files that
   was tightly coupled to SimDag. The instrumentation of DAG simulation is still