@@ -6,6 +6,7 @@ MC:
    See CommunicationDeterminism for an example.
  - Support mutex in DPOR reduction
  - Seems to work on Arm64 architectures too.
+ - Display a nice error message when ptrace is not usable.
 
 SMPI:
  - fix for FG#100 by ensuring small asynchronous messages never overtake larger
@@ -24,6 +25,7 @@ XBT:
 
 Fixed bugs (FG#.. -> FramaGit bugs; FG!.. -> FG merge requests)
  (FG: issues on Framagit; GH: issues on GitHub)
+ - FG#57: Mc SimGrid should test whether ptrace is usable
  - FG#100: [SMPI] Order of the message matching is not guaranteed
  - FG#101: LGPL 2.1 is deprecated license
  - GH#151: Missing mutexes for DPOR.
